feat: 🔥 public api for enigma z
