# packages/backend/swagger.yaml
@@ -28,6 +28,7 @@ tags:
     - name: "prospect"
     - name: "subscription"
     - name: "settings"
+    - name: "enigma-x"
 paths:
     /auth:
         put:
@@ -2257,6 +2258,30 @@ paths:
                           "client",
                           "prospect",
                       ]
+    /enigma-x/publications:
+        get:
+            tags:
+                - "enigma-x"
+            summary: "public publications for enigma-x "
+            description: "return array of publications"
+            operationId: "enigmaXGetPublications"
+            responses:
+                "200":
+                    description: "successful operation"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/enigma-x_publications"
+                "400":
+                    description: "Bad Request"
+                "401":
+                    description: "Unauthorized"
+                "403":
+                    description: "Forbidden"
+                "404":
+                    description: "Not Found"
+                "500":
+                    description: "Internal Server Error"
 components:
     securitySchemes:
         bearerAuth:
@@ -3353,3 +3378,46 @@ components:
                     example: {}
                 is_active:
                     type: boolean
+        enigma-x_publications:
+            type: object
+            properties:
+                publications:
+                    type: array
+                    items:
+                        type: "object"
+                        properties:
+                            id:
+                                type: "string"
+                            status:
+                                enum:
+                                    - published
+                                    - draft
+                                type: "string"
+                            title:
+                                type: "string"
+                            description:
+                                type: "string"
+                            content:
+                                type: "string"
+                            image:
+                                type: string
+                            author_name:
+                                type: "string"
+                            created_at:
+                                type: "string"
+                                example: "YYYY-MM-DD"
+                                pattern: '^\d{4}-\d{2}-\d{2}$'
+                            updated_at:
+                                type: string
+                                example: "YYYY-MM-DD"
+                                pattern: '^\d{4}-\d{2}-\d{2}$'
+                            shares:
+                                type: "integer"
+                            views:
+                                type: "integer"
+                            likes:
+                                type: "integer"
+                            dislikes:
+                                type: "integer"
+                            comments:
+                                type: "integer"
